# alfajor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  antigravity_ui_prompt.md  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
alfajor/: __init__.py  config.py  enums.py  extensions.py
alfajor/blueprints/admin/: __init__.py  forms.py  routes.py
alfajor/blueprints/auth/: __init__.py  forms.py  routes.py
alfajor/blueprints/employees/: __init__.py  forms.py  routes.py
alfajor/blueprints/payroll/: __init__.py  routes.py
alfajor/blueprints/ranking/: __init__.py  routes.py
alfajor/blueprints/reports/: __init__.py  routes.py
alfajor/blueprints/requests/: __init__.py  routes.py
alfajor/blueprints/settings/: __init__.py  routes.py
alfajor/blueprints/shifts/: __init__.py  routes.py
alfajor/models/: __init__.py  attendance.py  audit.py  base.py  employee.py  payroll.py  ranking.py  requests.py  schedule.py  settings.py  user.py
alfajor/services/: __init__.py  audit_service.py  payroll_calculator.py  ranking_calculator.py  settings_service.py  shift_validator.py
alfajor/static/css/: app.css  dashboard.css  design-system.css  palette-cosas-ricas.css
alfajor/static/js/: dashboard.js
alfajor/templates/: base.html
alfajor/utils/: decorators.py  helpers.py  timecalc.py
docs/: PALETA_COSAS_RICAS.md  PLAN_PRIMER_PASO.md
migrations/versions/: c01b72261043_initial_models.py
scripts/: seed.py  update_setting_descriptions.py
tests/: conftest.py  test_basic.py  test_logic.py
(+24 files in other folders)
